welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:2: error: ambiguous reference to overloaded definition,
both method valAbs in class nearHundred of type (n: Int)Int
and  method valAbs in class nearHundred of type (n: Int)Int
match argument types (Int)
	if (valAbs(100) <= 10 || valAbs(200) <= 10){
            ^nearHundred:11: error: method valAbs is defined twice
  conflicting symbols both originated in file 'plm.runtime24.nearHundred'
def valAbs(n:Int):Int = {
    ^